# quackvideo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
config/: default.yaml
examples/: README.md  audio_operations.py  frame_extraction.py  synthetic_generation.py
examples/basic/: README.md  frame_extraction_basic.py  frame_manipulation.py  frame_processing.py  video_reading.py  video_writing.py
examples/error_handling/: error_handling_frames.py  error_handling_video.py
scripts/: extract_flac_from_mp4.sh  extract_frames_from_mp4.sh  mix_audio_tracks.sh  slugify_files.sh  swap_audio.sh
src/quackvideo/core/: ffmpeg.py  utils.py
src/quackvideo/core/operations/: audio.py  base.py  frames.py  models.py
src/quackvideo/synthetic/: audio.py  base.py  video.py
src/quackvideo/video/: reader.py  writer.py
src/reelpy/core/: ffmpeg.py  utils.py
src/reelpy/video/: reader.py  writer.py
tests/: conftest.py
tests/core/: test_ffmpeg.py  test_models.py  test_utils.py
tests/integration/: test_audio_pipeline.py
tests/operations/: test_audio.py  test_frames.py
tests/quackvideo/: test_ffmpeg.py  test_frame_extraction.py  test_utils.py  test_video.py  test_video_metadata.py
tests/reelpy/: test_ffmpeg.py  test_frame_extraction.py  test_video_metadata.py
tests/synthetic/: test_audio_gen.py  test_video_gen.py
