[project]
name = "Quackvideo"
version = "0.1.0"
description = "A modern, high-performance Python video editing library built on FFmpeg. Simplify video manipulation with an intuitive, Pythonic API, designed for speed and ease of use."
requires-python = ">=3.12,<3.13"

# Core dependencies that any user of the library needs
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pydantic>=2.6.0",
    "pillow>=10.0.0",
    "onnxruntime>=1.15.0",
    "ffmpeg-python>=0.2.0",
    "tqdm>=4.66.1",
    "pyyaml>=6.0.1",
    "fire>=0.5.0",
]

[project.optional-dependencies]
# For users who want to use advanced ML features
ml = [
    "torch",
    "torchvision",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

# For library developers - all tools needed for development
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "ipykernel>=6.0.0",
    "notebook>=7.0.0",
    "pytest-timeout",
]

# For users who want all features (but not dev tools)
full = [
    "torch",
    "torchvision",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

# For developers who want everything
all = [
    "torch",
    "torchvision",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "black>=24.1.0",
    "ipykernel>=6.0.0",
    "notebook>=7.0.0",
    "pytest-timeout",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "A",   # flake8-builtins
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true